@@ -71,8 +71,8 @@ struct thread_db
 				sigset_t *ti_sigmask_p,
 				unsigned int ti_user_flags);
   td_err_e (*td_thr_tls_get_addr_p) (const td_thrhandle_t *th,
-				     void *map_address,
-				     size_t offset, void **address);
+				     psaddr_t map_address,
+				     size_t offset, psaddr_t *address);
   const char ** (*td_symbol_list_p) (void);
 };
 
