@@ -1,3 +1,13 @@
+2009-12-18  Doug Evans  <dje@google.com>
+
+	* gdb_proc_service.h (psaddr_t): Fix type.
+	* linux-thread-db.c (thread_db_info.td_thr_tls_get_addr_p): Fix
+	signature to match glibc.
+	(thread_db_get_thread_local_address): Use psaddr_t for type of
+	address to match parameter of td_thr_tls_get_addr_p.
+	Cast through psaddr_t instead of (void*) to match parameter of
+	td_thr_tls_get_addr_p.
+
 2009-12-17  Stan Shebs  <stan@codesourcery.com>
 
 	* breakpoint.c (bpstat_check_location): Check for tracepoints.
